# bevy1

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: INDEX.md
docs/bevy/: 01-what-is-bevy.md  02-entity-component-system.md  03-systems-and-scheduling.md  04-resources-and-state.md  05-components-and-queries.md  06-rendering-pipeline.md  07-user-interface.md  08-asset-system.md  09-relationships-and-hierarchy.md  10-observers-and-events.md  11-plugins-and-ecosystem.md  12-performance-and-optimization.md
docs/bonus-topics/: 01-the-game-loop.md  02-linear-algebra-for-games.md  03-state-machines-in-games.md  04-spatial-data-structures.md  05-audio-in-games.md  06-color-theory-for-games.md  07-animation-systems.md  08-networking-for-games.md  09-input-handling.md  10-debugging-games.md  11-scene-management.md  12-shaders-and-materials.md  13-testing-games.md  14-entity-patterns.md  15-camera-systems.md  16-tilemaps-and-2d-worlds.md  17-pathfinding.md  18-webassembly-and-cross-platform.md  19-open-source-game-development.md  20-save-systems.md  21-accessibility-in-games.md  22-data-oriented-design.md  23-the-art-of-playtesting.md  24-particle-systems.md
docs/game-design/: 01-what-is-game-design.md  02-game-feel-and-juice.md  03-player-psychology.md  04-level-design.md  05-balance-and-systems.md  06-procedural-generation.md
docs/github-workflows/: 01-github-as-development-platform.md  02-issues-and-project-management.md  03-pull-requests-and-code-review.md  04-github-actions-and-cicd.md  05-ai-code-assistants.md
docs/rust/: 01-why-rust-for-games.md  (+2 more)
(+20 files in other folders)
